--- a/e2e/docker-compose.e2e.yml
+++ b/e2e/docker-compose.e2e.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   e2e_traefik_local:
@@ -11,7 +11,7 @@ services:
       - httpbin
     volumes:
       - ./e2e:/etc/traefik
-      - ./build:/plugins-local/src/github.com/jcchavezs/coraza-http-wasm-traefik
+      - ./build:/plugins-local/src/github.com/adamab48/coraza-http-wasm-traefik
 
   e2e_traefik_remote:
     extends:
